--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@thaitype/npm-typescript-esm-bun-boilerplate",
-  "version": "0.0.1",
-  "description": "NPM TypeScript Boilerplate with Bun, ESM, using TSC without bundler, support Sourcemap from TypeScript",
+  "name": "infra-state-matcher",
+  "version": "0.0.0",
+  "description": "Support Terraform State for Matching config between 2 resources",
   "type": "module",
   "scripts": {
     "check": "tsc -b tsconfig.json",
@@ -50,5 +50,8 @@
       "import": "./dist/esm/index.js",
       "default": "./dist/cjs/index.js"
     }
+  },
+  "bin": {
+    "ism": "dist/esm/cli.js"
   }
 }
