feat: add resource annotation default class for default behavior on resource annotation on infra state like terraform state

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-export-namespace-from": "^7.24.1",
     "@babel/plugin-transform-modules-commonjs": "^7.24.1",
     "@types/bun": "latest",
+    "@types/debug": "^4.1.12",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "release-it": "^17.3.0"
   },
@@ -53,5 +54,9 @@
   },
   "bin": {
     "ism": "dist/esm/cli.js"
+  },
+  "dependencies": {
+    "debug": "^4.3.5",
+    "zod": "^3.23.8"
   }
 }
