--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   },
   "dependencies": {
     "debug": "^4.3.5",
+    "handlebars": "^4.7.8",
+    "picocolors": "^1.0.1",
+    "strip-indent": "^4.0.0",
     "zod": "^3.23.8"
   }
 }
