--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "ism": "dist/esm/cli.js"
   },
   "dependencies": {
+    "@effect/cli": "^0.37.4",
+    "@effect/platform-node": "^0.53.20",
     "debug": "^4.3.5",
+    "effect": "^3.4.8",
     "handlebars": "^4.7.8",
     "picocolors": "^1.0.1",
     "strip-indent": "^4.0.0",
